# c-compiler

./: .gitignore  CMakeLists.txt
TestInputs/assg1_milestone1/: test00  test16  test17  test18  test19
TestInputs/assg1_milestone1/OUTPUTS/: test00-out  test02-out  test03-out  test04-out  test05-out  test06-out  test07-out  test08-out  test09-out  test10-out  test11-out  test12-out  test13-out  test14-out  test15-out  test16-out  test17-out  test18-out  test19-out
c/: G0-sample.c  G1-sample.c  G2-sample.c
headers/: ast.h  compiler.hpp  parser.hpp  scanner.hpp  symbol.h  symboltablestack.hpp  tac.h  token.hpp
src/: ast-print.c  ast.c  compiler.cpp  main.cpp  parser.cpp  scanner.cpp  symbol.cpp  symboltablestack.cpp  token.cpp
